# stovoy.tech

./: .dockerignore  .gitignore  Caddyfile.dev  Caddyfile.prod  Cargo.toml  Dockerfile  Dockerfile.frontend  README.md  TODO.md  Trunk.toml  build.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  justfile  nginx.conf  package.json  push.sh  release.sh  run.sh  rust-toolchain.toml  stovoy-tech-from-image  tailwind.config.cjs  update.sh
.github/workflows/: cargo-deny.yml  ci.yml  commitlint.yml
backend/: Cargo.toml  build.rs
backend/src/: lib.rs  main.rs
backend/tests/: arena_ws.rs  healthz.rs  ping.rs
content/: evades-in-2025-the-architecture-behind-the-new-engine.md  hello-world.md  welcome-to-stovoy-dev.md
frontend/: .eslintrc.cjs  Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  style.css  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html  chat.rs  home.rs  lib.rs  nav.rs  routes.rs  snake.rs  theme.rs
frontend/src/lib/: markdown.ts
frontend/src/lib/components/: CodeViewer.svelte  SnakeGame.svelte  TypingText.svelte
frontend/src/lib/stores/: codeFiles.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/blog/: +page.svelte  +page.ts
frontend/src/routes/blog/[slug]/: +page.svelte  +page.ts
frontend/src/routes/code/: +page.svelte
frontend/src/routes/game/snake/: +page.svelte
frontend/src/routes/snake/: +page.svelte
frontend/static/: highlight.min.js
resources/: entrypoint.sh  nginx-plain.conf  nginx-ssl.conf
src/: main.rs
src/arena/: chat.rs  mod.rs
static/: .gitignore  Cargo.toml  index.html  index.js  package.json  snake.md  style.scss
static/src/: index.html  index.js  main.rs
static/wasm/src/: main.rs
static/wasm/src/arena/: mod.rs
static/wasm/src/snake/: mod.rs
stovoy_source/: Cargo.toml  build.rs
stovoy_source/src/: lib.rs
