[package]
name = "stovoy-tech-backend-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"

[[bin]]
name = "stovoy-tech-axum"
path = "src/main.rs"
