[package]
name = "stovoy-tech-backend-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"


# Configuration
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }

# JSON serialization
serde_json = "1.0"

[dev-dependencies]
tower = "0.5"


[[bin]]
name = "stovoy-tech-axum"
path = "src/main.rs"
