[package]
name = "stovoy-dev-backend-axum"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.1", features = ["trace"] }
anyhow = "1"


# Configuration
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }

# JSON serialization
serde_json = "1.0"

stovoy_source = { path = "../stovoy_source" }

[build-dependencies]
pulldown-cmark = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2"
chrono = { version = "0.4" }

[dev-dependencies]
tower = "0.5"
tokio-tungstenite = "0.26"
futures-util = "0.3"


[[bin]]
name = "stovoy-dev-axum"
path = "src/main.rs"
