[package]
name = "stovoy-tech-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = { version = "0.11", features = ["console", "futures", "timers", "storage"] }
yew-router = { version = "0.18" }
serde = { version = "1", features = ["derive"], optional = true }
futures-util = { version = "0.3", default-features = false, features=["std"] }
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Window",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "MediaQueryList",
] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
